# SkillForge-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  logic.md  main.py  pyproject.toml  requirements.txt  sample_input_output.md
frontend/: index.html  script.js  styles.css
models/: schemas.py
routes/: analyze.py  evaluation.py  interview.py  learning.py
services/: evaluator.py  gap_analysis.py  learning_plan.py  proficiency_engine.py  question_generator.py  skill_extractor.py  skill_mappings.py  skill_matcher.py
utils/: json_parser.py  llm_client.py  prompts.py  validators.py
